--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3,7 +3,7 @@ body {
   font-size: 18px;
   line-height: 34px;
   color: #777777;
-  background: url("../images/concrete_seamless.png");
+  background: url("file:///Users/Brooks/Desktop/code/Responsive-Portfolio/assets/concrete_seamless.png");
 }
 
 * {
@@ -214,4 +214,70 @@ input[type=submit] {
   cursor: pointer;
   background: #4aaaa5;
   border: 0 none;
+}
+/*Media Queries here, beware*/
+
+/*screen size 980px*/
+@media only screen and (max-width: 980px) {
+  nav {
+    margin-right: 20px;
+  }
+  #main-container {
+    height: 50%;
+    width: 75%;
+    float: left;
+    margin-left: 20px;
+  }
+  #logo {
+    margin-left: 20px;
+  }
+}
+/*screen size 768px*/
+@media only screen and (max-width: 768px) {
+  nav {
+    margin-right: 20px;
+  }
+  #main-container {
+    width: 95%;
+  }
+}
+/*screen size 640px*/
+@media only screen and (max-width: 600px) {
+  nav {
+    float: left;
+    margin-left: 130px;
+    margin-bottom: 15px;
+  }
+  #masthead {
+    position: static;
+
+  }
+  #logo {
+    float: right;
+    width: 100%;
+    margin-left: none;
+  }
+  #main-container {
+    width: 95%; 
+    margin-left: 15px;
+    margin-top: 0px;
+    padding-top: 1px;
+  }
+
+  .main-section {
+    padding-top: 1px;
+    padding-right: 5px;
+    padding-left: 10px;
+  }
+}
+.auth-image {
+  height: 350px;
+  width: 475px;
+  margin-left: 25px;
+  margin-bottom: 10px;
+}
+
+.div work {
+  margin: 0;
+
 }
